# python-datauri

./: .bumpversion.cfg  .coveragerc  .gitignore  .travis.yml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  README.rst  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: black.yml  gh-release.yml  lint.yml  python-package.yml
datauri/: __init__.py  exceptions.py
tests/: __init__.py  test_file.txt  test_file_ebcdic.txt  test_parsing.py  test_pydantic.py
tests/assets/: test_long_file.txt
