[tool.poetry]
name = "python-datauri"
version = "1.2.1"
description = "A li'l class for data URI manipulation in Python"
authors = ["Flavio Curella <flavio.curella@gmail.com>"]
readme = "README.rst"
packages = [{include = "datauri"}]
license = "Unlicense"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
coveralls = "^3.3.1"
pytest = "^7.3.1"
pydantic = "^1.10.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
python_files = ["test_*.py"]
norecursedirs = ["tests/assets"]
